# fishy

./: .gitignore  CLAUDE.md  FEATURE_REQUEST_indices.md  Makefile  README.md  main.py  pyproject.toml
docs/: dhram.md  iha.md  naturalize.md
scratchpad/: DHRAM_DESIGN_SPEC.md  HYDROLOGICAL_INDICES_FORMULAS_QUICK_REF.md  HYDROLOGICAL_INDICES_SPECIFICATION.md
scratchpad/feature_request/: FEATURE_REQUEST_indices.md
src/fishy/: __init__.py  _extract.py
src/fishy/dhram/: __init__.py  _indicators.py  compute.py  errors.py  evaluate.py  types.py
src/fishy/documentation/: consuming_docs.md  dhram.md  iari.md  naturalize.md
src/fishy/iari/: __init__.py  _deviation.py  compute.py  errors.py  evaluate.py  objective.py  types.py
src/fishy/iha/: __init__.py  _groups.py  _util.py  bridge.py  compute.py  errors.py  types.py
src/fishy/naturalize/: __init__.py  errors.py  natural_river_splitter.py  naturalize.py  types.py
taqsim_docs/: 30_consuming_docs.md
tests/: conftest.py
tests/dhram/: conftest.py  test_compute.py  test_errors.py  test_evaluate.py  test_types.py
tests/iari/: conftest.py  test_compute.py  test_deviation.py  test_errors.py  test_evaluate.py  test_objective.py  test_types.py
tests/iha/: conftest.py  test_bridge.py  test_compute.py  test_groups.py  test_invariants.py  test_types.py  test_util.py
tests/naturalize/: conftest.py  test_natural_river_splitter.py  test_naturalize.py
